--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,4 @@ flask-sqlalchemy        # For SQL DB
 flask-jwt-extended      # For auth
 passlib                 # Library to hash password
 flask-migrate
+gunicorn                # To run Docker with better performance than the build in flask environment
